[UTF-8][Japanese]

*Ver3.0 RC2: 2015/11/xx

-デザイン編集を強化しました。
--記事ヘッダを編集できるようにしました。
--単一記事表示と複数記事表示のそれぞれで、記事ヘッダとフッタを編集できるようにしました。
--複数記事表示時に、記事と記事の間に出力するモジュールを編集できるようにしました。
-[http://adiary.org/v3man/Satsuki-tag/tex#mathjax:MathJaxに対応しました]。
-textarea を 'display: block' に変更しました。
-Twitterへの通知送信を更新通知Pingの設定と連動するようにしました。
-{[asin:XXXX:image]}記法使用時、スライドショー（Lightbox2）の対象にならないようにしました。
-付加情報リビルド時にタグ情報テーブルも再生成するようにしました。
-ツリー編集画面で項目編集中にツリー内の別の場所をクリックしたら編集を終了するようにしました。
-記事一覧を nofollow から外しロボットに検索させるようにしました。((検索エンジンにサイト内のすべての記事を見つけてもらいやすくするための措置です。サイトマップの代わり。))
-デザイン編集で必須要素が消えないように対策しました。((本来は起こりえないのですが、不具合発生時のセーフティとして対策しました。))
-ボタンのデザインがブラウザによりまちまちなので、最低限CSSで指定するようにしました。
-Twitterソーシャルボタンで共有済の検索から「http://」を除くようにしました。
-編集画面の記事番号の表示位置を変更しました。
-編集画面の記法ヘルパーや画像貼付がHTML入力選択時も動作するようにしました。
-記事編集画面の下書き保存ボタンの位置を変更しました。((自分でよく間違えて公開保存してしまっていたので、多分こっちの変更後のほうが使いやすいはず。))
-HTML直接入力のパーサーを改良し、使いやすくしました。
-CGI動作時の記事編集保存の速度を少し速くしましした。
-index.html を更新しました。
-Twitterの仕様変更に合わせツイート数の表示機能をオフにしました。（[http://did2memo.net/2015/09/28/twitter-count-json-shut-down/:参考]）
-【さつき記法】[http://adiary.org/v3man/Satsuki/list:#dl:定義済みリスト記法]で、項目名と項目（dt/dd）を「n:m」で記述できるようにしました。（Thanks to Kaede）
-【さつき記法】ブロック記法とリスト記法を互いに入れ子した時の挙動を改善しました。
-【さつき記法】table出力時の「{<tr class="odd"/"even">}」クラス出力をやめました。((CSSで実現できるので不要になりました。))
-【さつき記法】拡張リスト記法の項目の最後に空行を記述できる仕様を廃止しました。
-【Markdown】{\>}のエスケープ処理が正しくなかったので修正。
-【アルバム】フォルダロード中は「loadingアイコン」に切り替えるようにしました。
-【アルバム】操作ボタンを整理しました。
-【lightbox】スマホからの操作時、ズーム中やズーム動作で画像をめくらないようにしました。
-【lightbox】画像リンクを、SHIFTと共にクリックした場合はブラウザデフォルト動作を、CTRLを押しながらクリックした場合はファイルをダウンロードするようにしました。
-【lightbox】戻るボタンを押した時、ページ遷移をせずに単に画像ポップアップを閉じるようにしました。
-【テーマ】satsuki2のマルチサイドバー表示時のサイドバーの幅を可変にしました。
-【テーマ】sumomoテーマのスマホ/タブレット表示を改善しました。
-【fix】nature-dark テーマを選ぶとエラーが表示される。
-【fix】シンタックハイライトで言語「c」を指定するとセンタリングされてしまう。（[http://test.blog.abk.nu/02829:Thanks to tester]）
-【fix】[http://adiary.org/v3man/install2/:#conf:trust_mode設定時]、スマホメニューの設定で項目が出てこない。（[https://twitter.com/dentacs/status/636828022612463616:Thanks to tono]）