@@ -173,7 +173,7 @@
 
 
 <$ifbreak(##logs==-1)><@> 記事がなければ処理終了
-<$ifexec(!art_sample_mode, begin)>
+<@ifexec(!art_sample_mode, begin)>
 <@>$HEADER:END$----------------------------------------------------------------
 
 <@><!--========================================================================-->
